fix: sponsor images alignment in mobile view

--- a/src/home/style.styl
+++ b/src/home/style.styl
@@ -35,7 +35,7 @@ h3
 
 .sponsor-images
     display: flex
-    justify-content: space-between
+    justify-content: center
     align-items: center
     gap: 0.8em 1.5rem;
     flex-wrap: wrap;
